finished work with styles and tailwind

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
   </head>
 
-  <body>
+  <body class="max-h-full flex bg-gradient-to-r from-indigo-100 to-blue-300">
   <div class="screen">
     <%= yield %>
   </div>
