--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -13,11 +13,11 @@
 
 .output {
   overflow: auto;
-  min-height: 91.5%;
+  min-height: 90.5%;
   min-width: 100%;
-  max-height: 91.5%;
+  max-height: 90.5%;
   max-width: 100%;
-  background: #daedf9;
+  //background: #daedf9;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -30,12 +30,12 @@ body {
 .name {
   border-bottom: solid;
   display: flex;
-  color: #1d90ee;
+  color: black;
   align-items: center;
   justify-content: center;
   height: 5%;
   width: 100%;
-  background: #c4dff3;
+  //background: #c4dff3;
 }
 
 .our_messages {
