--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,11 @@
-<header>
+<header class="bg-gradient-to-r from-cyan-400 to-blue-400">
       <div class = "hello">
         <h3 class="user"><%= t(:welcome) %>, <%= @user_name %></h3>
       </div>
     <div class="right items-center">
       <% if current_user.avatar.file %>
         <div class="mr-1.5 content-center">
-          <%= link_to image_tag(current_user.avatar.url(:thumb), class: "avatar"), { action: "edit", controller: "users", id: current_user.id } %>
+          <%= link_to image_tag(current_user.avatar.url(:thumb), class: "avatar rounded-full"), { action: "edit", controller: "users", id: current_user.id } %>
         </div>
       <% else %>
         <div class="mr-1.5 items-center">
@@ -13,28 +13,25 @@
         </div>
       <% end %>
       <div class="mr-1.5 items-center">
-        <%= link_to 'En', root_url(locale: :en), :method => :get, class: "locale shadow bg-blue-500 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold rounded ml-1 mr-1" %>
+        <%= link_to 'En', root_url(locale: :en), :method => :get, class: "locale shadow bg-cyan-500 p-1 hover:bg-blue-200 focus:shadow-outline focus:outline-none text-white font-bold rounded ml-1 mr-1" %>
       </div>
       <div class="mr-1.5 items-center">
-        <%= link_to 'Ua', root_url(locale: :ua), :method => :get, class: "locale shadow bg-blue-500 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold rounded mr-1" %>
+        <%= link_to 'Ua', root_url(locale: :ua), :method => :get, class: "locale shadow bg-cyan-500 p-1 hover:bg-blue-200 focus:shadow-outline focus:outline-none text-white font-bold rounded mr-1" %>
       </div>
       <div class="mr-1.5 items-center">
-        <%= link_to t(:exit), destroy_user_session_path, data: { confirm: t(:sure) }, :method => :delete, class: "exit shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold rounded mr-2" %>
+        <%= link_to t(:exit), destroy_user_session_path, data: { confirm: t(:sure) }, :method => :delete, class: "exit shadow p-1 bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold rounded mr-2" %>
       </div>
     </div>
 </header>
 
-<div class="flex mt-3">
+<div class="flex sidebar md:flex">
     <%= render 'users', users: @users_show, user_id: @user_id %>
-<!--  <div>-->
-    <%#= render 'rooms' %>
-<!--  </div>-->
 </div>
 
-<div class="chat-pagination ml-10">
-  <nav aria-label="Page navigation example">
-    <ul class="pagination">
-      <%= paginate @users_show %>
-    </ul>
-  </nav>
-</div>
+<!--<div class="chat-pagination ml-10">-->
+<!--  <nav aria-label="Page navigation example">-->
+<!--    <ul class="pagination">-->
+      <%#= paginate @users_show %>
+<!--    </ul>-->
+<!--  </nav>-->
+<!--</div>-->
